RBAC-Project/networkpolicy/allow-dev-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-dev-internal
  namespace: dev

spec:
  podSelector: {}

  ingress:
  - from:
    - podSelector: {}

  policyTypes:
  - Ingress
