RBAC-Project/networkpolicy/allow-qa-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-qa-internal
  namespace: qa

spec:
  podSelector: {}

  ingress:
  - from:
    - podSelector: {}

  policyTypes:
  - Ingress
