RBAC-Project/networkpolicy/default-deny-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: dev

spec:
  podSelector: {}

  policyTypes:
  - Ingress
