RBAC-Project/networkpolicy/default-deny-qa.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: qa

spec:
  podSelector: {}

  policyTypes:
  - Ingress
